--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -4,7 +4,7 @@
 		"experimentalDecorators": true,
 		"target": "ES2019",
 		"module": "AMD",
-		"outDir": "../js"
+		"outFile": "../js/index.js"
 	},
 	"include": ["**/*"]
 }
