Add world, tile, view, sprite. A rock wall is rendered!

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -4,7 +4,8 @@
 		"experimentalDecorators": true,
 		"target": "ES2019",
 		"module": "AMD",
-		"outFile": "../js/index.js"
+		"outFile": "../js/index.js",
+		"inlineSourceMap": true
 	},
 	"include": ["**/*"]
 }
