--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,13 @@
 			},
 			"problemMatcher": [],
 			"label": "npm: build:watch",
+		},
+		{
+			"type": "npm",
+			"script": "serve",
+			"group": "build",
+			"problemMatcher": [],
+			"label": "npm: serve",
 		}
 	]
 }
