Improve generation, don't render light level 0 tiles, add gravel sprite

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -5,7 +5,7 @@
 		"target": "ES2019",
 		"module": "AMD",
 		"outFile": "../js/index.js",
-		// "inlineSourceMap": true,
+		"inlineSourceMap": true,
 		"noImplicitOverride": true
 	},
 	"include": ["**/*"]
