--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"private": true,
 	"dependencies": {
-		"sass": "1.32.11",
-		"typescript": "^4.3.0-beta"
+		"@wayward/excevent": "0.1.1"
 	},
 	"devDependencies": {
 		"concurrently": "6.0.2",
-		"http-server": "0.12.3"
+		"http-server": "0.12.3",
+		"sass": "1.32.11",
+		"typescript": "^4.3.0-beta"
 	},
 	"scripts": {
 		"build": "concurrently --kill-others \"npm run ts\" \"npm run scss\" --names \"ts,scss\"",
