--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"dependencies": {
-		"@wayward/excevent": "0.3.3"
+		"@wayward/excevent": "0.4.0-amd"
 	},
 	"devDependencies": {
 		"concurrently": "6.0.2",
